--- a/config.json
+++ b/config.json
@@ -16,13 +16,11 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
+    "BOTNAME": "𝑴𝑰𝑴 ☢️_𖣘 -𝑩𝑨𝑩𝒀 ⚠️",
     "PREFIX": "/",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
-    ],
+        "61579364571107",
+          ],
     "NDH": [
         "100000478146113"
     ],
